<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/lightgray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Nombre"
            android:id="@+id/etNom"
            android:inputType="textPersonName">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Telefono"
            android:id="@+id/etTel"
            android:inputType="number">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:id="@+id/etPass"
            android:inputType="textPassword">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/RepPassword"
            android:id="@+id/etPass1"
            android:inputType="textPassword">
        </EditText>

        <RadioGroup
            android:id="@+id/radioG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:checkedButton="@id/Hombre">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sexo"
                android:textColor="@color/red">
            </TextView>

            <RadioButton
                android:id="@+id/Hombre"
                android:text="@string/Hombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/Mujer"
                android:text="@string/Mujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hobby"
                android:textColor="@color/red">
            </TextView>

            <CheckBox
                android:id="@+id/Hobby1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Deporte"/>

            <CheckBox
                android:id="@+id/Hobby2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pasear"/>

            <CheckBox
                android:id="@+id/Hobby3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Leer"/>

            <CheckBox
                android:id="@+id/Hobby4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dormir"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FechaNacimiento"
            android:textColor="@color/red"
            android:layout_gravity="center">
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CiudadNacimiento"
                android:textColor="@color/red">
            </TextView>
            <Spinner
                android:id="@+id/spiLN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout>

        <Button
            android:id="@+id/Boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Guardar">
        </Button>


        <TextView
            android:id="@+id/tvDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="10dp"
            android:textAlignment="center">
        </TextView>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>